Revision history for Perl extension Puzzle.

0.03
    - BREAK COMPATIBILITY. Now, in your template, the content of the loaded
		page must be called "%frame_center%" where you have "%body%"
	- BREAK COMPATIBILITY. Now, in your template, if you want debug 
		debug information, you need to add "%frame_debug%" instead of
		"%debug%"
	- Add a sample folder with examples css and js for debug frame layout.
	- Add module dump in debug module
	- Now all frames had visibility of the title of the center page.

0.02  Sat Jan 29 20:47:11 CET 2011
 	- first public distribution.

0.01  Mon Dec  6 11:42:05 2010
	- original version; created by h2xs 1.23 with options
		-AXc -n Puzzle
