@@ -63,8 +63,8 @@ sub process {
 	if ($puzzle->cfg->cornice && 
 		$puzzle->args->print ne '1' && $puzzle->cfg->base) {
 		foreach (qw/top left right bottom/) {
-			if ($puzzle->cfg->{"frame_$_"} ne '') {
-				$self->$_->comp_path($puzzle->cfg->{"frame_$_"});
+			if ($puzzle->cfg->{"frame_${_}_file"} ne '') {
+				$self->$_->comp_path($puzzle->cfg->{"frame_${_}_file"});
 				$self->$_->process;
 			}
 		}
